--- a/sonarqube-mysql/docker-compose.yml
+++ b/sonarqube-mysql/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   sonarqube:
     depends_on:
       - db
-    image: sonarqube:latest
+    image: sonarqube:7.7-community
     restart: always
     ports:
       - "9000:9000"
