--- a/sonarqube-mysql/docker-compose.yml
+++ b/sonarqube-mysql/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   db:
-    image: mysql
+    image: mysql:5.7.25
     volumes:
       - db_data:/var/lib/mysql
     restart: always
