--- a/sonarqube-mysql/docker-compose.yml
+++ b/sonarqube-mysql/docker-compose.yml
@@ -25,4 +25,4 @@ services:
       SONARQUBE_JDBC_PASSWORD: P1b7JBvP8II4
       SONARQUBE_JDBC_URL: jdbc:mysql://db:3306/sonarqube?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
 volumes:
-  db_data:
+  db_data:/var/lib/sonarqube_mysql
