--- a/sonarqube-mysql/docker-compose.yml
+++ b/sonarqube-mysql/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: mysql:5.7.25
     volumes:
-      - db_data:/var/lib/mysql
+      - /var/lib/sonarqube_mysql:/var/lib/mysql
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: P1b7JBvP8II4
@@ -24,5 +24,3 @@ services:
       SONARQUBE_JDBC_USERNAME: sonarqube
       SONARQUBE_JDBC_PASSWORD: P1b7JBvP8II4
       SONARQUBE_JDBC_URL: jdbc:mysql://db:3306/sonarqube?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true
-volumes:
-  db_data:/var/lib/sonarqube_mysql
